[package]
name = "polkadot-collator"
version = "0.7.32-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.4"
sc-service = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service" }
log = "0.4.8"
tokio = "0.2.13"
futures-timer = "2.0"
codec = { package = "parity-scale-codec", version = "1.3.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
