[package]
name = "polkadot-rpc"
version = "0.7.32-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
jsonrpc-core = "14.0.3"
polkadot-primitives = { path = "../primitives" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-ensure-replay-parent-eq-relay-head"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-ensure-replay-parent-eq-relay-head"  }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-ensure-replay-parent-eq-relay-head"  }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-ensure-replay-parent-eq-relay-head"  }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "cecton-ensure-replay-parent-eq-relay-head" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate", branch = "cecton-ensure-replay-parent-eq-relay-head" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "cecton-ensure-replay-parent-eq-relay-head"  }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "cecton-ensure-replay-parent-eq-relay-head" }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
