[package]
name = "polkadot-service"
version = "0.7.32-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store", optional = true }
consensus = { package = "polkadot-validation", path = "../validation", optional = true }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
westend-runtime = { path = "../runtime/westend" }
polkadot-network = { path = "../network", optional = true }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
codec = { package = "parity-scale-codec", version = "1.3.0" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }

[dev-dependencies]
polkadot-test-runtime-client = { path = "../runtime/test-runtime/client" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
env_logger = "0.7.0"

[features]
default = ["db", "full-node"]
db = ["service/db"]
runtime-benchmarks = ["polkadot-runtime/runtime-benchmarks", "kusama-runtime/runtime-benchmarks", "westend-runtime/runtime-benchmarks"]
full-node = ["av_store", "consensus", "polkadot-network"]
