[package]
name = "polkadot-network-test"
version = "0.8.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["test-helpers"], branch = "cecton-use-custom-block-announce-validator" }
sc-network-test = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
