[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator", features = ["test-helpers"],  default-features = false }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
polkadot-test-runtime = { path = ".." }
polkadot-runtime-common = { path = "../../common" }
polkadot-primitives = { path = "../../../primitives" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "cecton-use-custom-block-announce-validator" }
futures = "0.3.1"
